--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,21 @@
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
+  <!-- jquery -->
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
+
+  <!-- bootstrap js -->
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!-- handlebars -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
+
+  <!-- custom script -->
+  <script type="text/javascript" src="scripts/app.js"></script>
+
   <title>Express To Do App</title>
 </head>
 <body>
@@ -93,16 +108,6 @@
     </div>
   </div>
 
-  <!-- jquery -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 
-  <!-- bootstrap js -->
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-  <!-- handlebars -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
-
-  <!-- custom script -->
-  <script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
